--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -7,6 +7,7 @@ pytest-asyncio
 pytest-timeout
 pre-commit
 mypy
-pyroute2==0.9.1rc1
+git+https://github.com/svinota/pyroute2.git@p4-fix-batch2
+# pyroute2==0.9.1rc1
 pydantic
 pydantic-settings
