--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,5 +3,5 @@ requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [[tool.mypy.overrides]]
-module = ["pyroute2.*", "pytest.*", "pytest_asyncio.*"]
+module = ["pyroute2.*", "pytest.*", "pytest_asyncio.*", "zeroconf.*"]
 ignore_missing_imports = true
