--- a/kubernetes/daemonset.yaml
+++ b/kubernetes/daemonset.yaml
@@ -1,5 +1,33 @@
 ---
 apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: pyroute2-cni-sa
+  namespace: pyroute2-cni
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: pyroute2-cni-clusterrole
+rules:
+  - apiGroups: [""]
+    resources: ["namespaces"]
+    verbs: ["get", "list", "watch"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: pyroute2-cni-binding
+subjects:
+  - kind: ServiceAccount
+    name: pyroute2-cni-sa
+    namespace: pyroute2-cni
+roleRef:
+  kind: ClusterRole
+  name: pyroute2-cni-clusterrole
+  apiGroup: rbac.authorization.k8s.io
+---
+apiVersion: v1
 kind: ConfigMap
 metadata:
   name: server-config
@@ -45,6 +73,7 @@ spec:
         tier: node
         app: pyroute2-cni
     spec:
+      serviceAccountName: pyroute2-cni-sa
       affinity:
         nodeAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
@@ -61,7 +90,7 @@ spec:
         effect: NoSchedule
       containers:
       - name: pyroute2-cni
-        image: ghcr.io/svinota/pyroute2-cni:v0.0.172
+        image: ghcr.io/svinota/pyroute2-cni:v0.0.178
         resources:
           requests:
             cpu: "100m"
