--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 pydantic==2.10.6
 zeroconf==0.146.1
+kubernetes
 networkx
 matplotlib
+ipaddress
 # pyroute2==0.9.1rc1
 git+https://github.com/svinota/pyroute2.git@master
