--- a/kubernetes/pyroute2-cni.yaml
+++ b/kubernetes/pyroute2-cni.yaml
@@ -1,5 +1,16 @@
 ---
 apiVersion: v1
+kind: Namespace
+metadata:
+  labels:
+    kubernetes.io/metadata.name: pyroute2-cni
+    name: pyroute2-cni
+    k8s-app: pyroute2-cni
+    pod-security.kubernetes.io/enforce: privileged
+    pod-security.kubernetes.io/enforce-version: latest
+  name: pyroute2-cni
+---
+apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: pyroute2-cni-sa
