server: support plugin loading using entry points

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,5 +32,7 @@ packages_dir =
 packages = find:
 
 [options.entry_points]
+pyroute2.cni =
+    network = pyroute2_cni.network:Plugin
 console_scripts =
     pyroute2-cni = pyroute2_cni.server:run
