--- a/kubernetes/pyroute2-cni.yaml
+++ b/kubernetes/pyroute2-cni.yaml
@@ -101,7 +101,7 @@ spec:
         effect: NoSchedule
       containers:
       - name: pyroute2-cni
-        image: ghcr.io/svinota/pyroute2-cni:v0.0.233
+        image: ghcr.io/svinota/pyroute2-cni:v0.0.243
         resources:
           requests:
             cpu: "100m"
@@ -123,7 +123,7 @@ spec:
         - name: pyroute2-run
           mountPath: /var/run/pyroute2
         - name: server-config
-          mountPath: /app/config
+          mountPath: /pyroute2-cni/config
       volumes:
       - name: host-root
         hostPath:
