--- a/learning/Dockerfile
+++ b/learning/Dockerfile
@@ -1,4 +1,4 @@
-FROM ghcr.io/svinota/pyroute2-cni:v0.0.243
+FROM ghcr.io/svinota/pyroute2-cni:0.0.245
 
 COPY . /my_plugin
 RUN cd /my_plugin && pip install .
