--- a/kubernetes/pyroute2-cni.yaml
+++ b/kubernetes/pyroute2-cni.yaml
@@ -73,12 +73,14 @@ data:
         node [fillcolor="#ffffff", style=filled]
 
         subgraph cluster_v0 {
-            label="$vrf_ifname";
+            label="K8S namespace $namespace\nVRF domain $vrf_ifname";
             type=vrf;
+            table=$vrf_table;
+            ifname="$vrf_ifname";
             bgcolor="#f0f0f0";
 
             subgraph cluster_n0 {
-                label="$namespace";
+                label="$pod_name";
                 type=netns;
                 bgcolor="#c0c0c0";
                 fd="$net_ns_fd";
@@ -151,7 +153,7 @@ spec:
         effect: NoSchedule
       containers:
       - name: pyroute2-cni
-        image: ghcr.io/svinota/pyroute2-cni:0.0.300
+        image: ghcr.io/svinota/pyroute2-cni:0.0.306
         resources:
           requests:
             cpu: "100m"
